# docs/swagger.yaml
@@ -15,6 +15,46 @@ definitions:
       error:
         type: string
     type: object
+  handler.LoginUserRequest:
+    properties:
+      password:
+        maxLength: 100
+        minLength: 2
+        type: string
+      user_name:
+        maxLength: 100
+        minLength: 2
+        type: string
+    required:
+    - password
+    - user_name
+    type: object
+  handler.LoginUserResponse:
+    properties:
+      access_token:
+        type: string
+      token_type:
+        type: string
+    type: object
+  handler.RegisterUserRequest:
+    properties:
+      password:
+        maxLength: 100
+        minLength: 2
+        type: string
+      user_name:
+        maxLength: 100
+        minLength: 2
+        type: string
+    required:
+    - password
+    - user_name
+    type: object
+  handler.RegisterUserResponse:
+    properties:
+      status:
+        type: string
+    type: object
 host: localhost:8080
 info:
   contact:
@@ -29,6 +69,40 @@ info:
   title: Go Backend Example API
   version: "1.0"
 paths:
+  /login-user:
+    post:
+      consumes:
+      - application/json
+      description: Authenticates a user and returns a JWT token.
+      parameters:
+      - description: Login Credentials
+        in: body
+        name: login
+        required: true
+        schema:
+          $ref: '#/definitions/handler.LoginUserRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.LoginUserResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      summary: User Login
+      tags:
+      - auth
   /orders:
     post:
       consumes:
@@ -65,6 +139,74 @@ paths:
       summary: Create a new order
       tags:
       - orders
+  /register-admin:
+    post:
+      consumes:
+      - application/json
+      description: Creates a new user with the Admin role.
+      parameters:
+      - description: Admin Registration Payload
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/handler.RegisterUserRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/handler.RegisterUserResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      summary: Register an Admin
+      tags:
+      - auth
+  /register-customer:
+    post:
+      consumes:
+      - application/json
+      description: Creates a new user with the Customer role.
+      parameters:
+      - description: Customer Registration Payload
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/handler.RegisterUserRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/handler.RegisterUserResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      summary: Register a Customer
+      tags:
+      - auth
 securityDefinitions:
   BearerAuth:
     description: Type "Bearer" followed by a space and then your token.
